style.css
body {
    font-family: 'Raleway', sans-serif;
}

#nav {
    background-color: rgba(255,255,255,0.7);
}

#nav a {
    padding: 7px;
    color: black;
}

#nav a.active {
    border-bottom: solid 4px #39789B;
}

.link.desktop {
    line-height: 30px;
}

.link.mobile {
    line-height: 50px;
}

.site-title {
    background-color: white;
}

/* BEGIN LANDING */

.ui.grid.landing {
    padding: 0;
    margin: 0;
}

.landing {
    background: url('pattern6.png');
    height: 100%;
    width: 100%;
    overflow: hidden;
}

.landing .about {
    color: white;
    position: relative;
}

.landing .about span {
    color: #BDD5EA;
}

.landing .img-container {
    height: 100%;
    background: url("http://i.imgur.com/E59Tz7l.jpg");
    background-size: cover;
}

.landing .about.desktop {
    height: 100%;
    margin-top: 200px;
    padding: 4em;
}

.landing .about.mobile {
    width: 100%;
    background: rgba(15,26,32,0.8);
    padding: 2em;
}

/* END LANDING */

#education {
    margin-top: 40px;
}

/* FOTORAMA STYLES */
.fotorama .caption {
    padding: 10px;
    position: absolute;
    bottom: 0;
    background-color: rgba(0,0,0,0.5);
    width: 100%;
    color: white;
}

